--- a/internal/templs/reviews.templ
+++ b/internal/templs/reviews.templ
@@ -1,7 +1,49 @@
 package templs
 
-templ NewReview() {
+import (
+	"github.com/wipdev-tech/pmdb/internal/tmdbapi"
+	t "github.com/a-h/templ"
+	"fmt"
+)
+
+type NewReviewData struct {
+	Movie tmdbapi.MovieDetails
+}
+
+templ NewReview(data NewReviewData) {
 	@Page("New Review") {
 		<h3 class="text-2xl font-semibold mb-1">Add a Review</h3>
+		<div class="h-28 flex gap-5 items-center my-10">
+			<img
+				class="h-full rounded"
+				src={ buildPosterURL(data.Movie.PosterPath) }
+				alt={ data.Movie.Title }
+			/>
+			<div>
+				<p class="text-4xl font-semibold my-2">{ data.Movie.Title }</p>
+				<a
+					class="text-blue-500 hover:text-blue-400"
+					href={ t.URL(fmt.Sprintf("/movies/%v", data.Movie.ID)) }
+				>
+					Back to movie page
+				</a>
+			</div>
+		</div>
+		<div class="flex flex-col gap-2">
+			<label>How was the movie?</label>
+			<div class="text-2xl font-bold text-primary">
+				<input
+					type="number"
+					min="0"
+					max="10"
+					value="5"
+					class="border border-primary rounded px-2 py-1 w-20 bg-transparent text-center"
+				/> / 10
+			</div>
+			<label>Write your Review</label>
+			<textarea
+				class="border border-primary rounded px-3 py-2 text-gray-50 min-h-48 bg-transparent"
+			></textarea>
+		</div>
 	}
 }
