--- a/internal/templs/reviews.templ
+++ b/internal/templs/reviews.templ
@@ -29,21 +29,34 @@ templ NewReview(data NewReviewData) {
 				</a>
 			</div>
 		</div>
-		<div class="flex flex-col gap-2">
-			<label>How was the movie?</label>
-			<div class="text-2xl font-bold text-primary">
-				<input
-					type="number"
-					min="0"
-					max="10"
-					value="5"
-					class="border border-primary rounded px-2 py-1 w-20 bg-transparent text-center"
-				/> / 10
+		<form>
+			<div class="flex flex-col gap-2">
+				<label>How was the movie?</label>
+				<div class="text-2xl font-bold text-primary">
+					<input
+						type="number"
+						min="0"
+						max="10"
+						value="5"
+						class="border border-primary rounded px-2 py-1 w-20 bg-transparent text-center"
+					/> / 10
+				</div>
+				<label>Write your Review</label>
+				<textarea
+					class="border border-primary rounded px-3 py-2 text-gray-50 min-h-48 bg-transparent"
+				></textarea>
 			</div>
-			<label>Write your Review</label>
-			<textarea
-				class="border border-primary rounded px-3 py-2 text-gray-50 min-h-48 bg-transparent"
-			></textarea>
-		</div>
+			<label class="flex items-center gap-2 my-3">
+				<input type="checkbox" id="public" name="public"/>
+				Public Review
+			</label>
+			<button
+				type="submit"
+				class="rounded px-3 py-2 bg-blue-600 hover:bg-blue-500 flex gap-2 items-center my-5 w-max"
+			>
+				@iconAddReview()
+				Done
+			</button>
+		</form>
 	}
 }
