--- a/internal/templs/index.templ
+++ b/internal/templs/index.templ
@@ -11,7 +11,7 @@ type IndexData struct {
 	LoggedIn   bool
 	User       database.GetUserRow
 	NowPlaying []tmdbapi.NowPlayingMovie
-	Reviews    []database.GetReviewsRow
+	Reviews    []tmdbapi.Review
 }
 
 templ Index(data IndexData) {
@@ -59,7 +59,7 @@ templ indexWelcomeMessage(data IndexData) {
 	</section>
 }
 
-templ indexLatestReviews(reviews []database.GetReviewsRow) {
+templ indexLatestReviews(reviews []tmdbapi.Review) {
 	<section class="my-10">
 		<a href="/reviews">
 			<h3 class="border border-primary text-primary px-4 py-3 text-3xl rounded-xl font-semibold mb-5 flex gap-2 items-center justify-between">
@@ -70,11 +70,29 @@ templ indexLatestReviews(reviews []database.GetReviewsRow) {
 				<p class="text-sm">Open the Feed</p>
 			</h3>
 		</a>
-		for _, r := range reviews {
-			<p>{ r.MovieTmdbID }</p>
-			<p>{ fmt.Sprint(r.Rating) }/10</p>
-		}
+		<ul class="flex items-center gap-2 overflow-x-auto">
+			for _, r := range reviews {
+				@latestReviewCard(r)
+			}
+		</ul>
 	</section>
+}
+
+templ latestReviewCard(r tmdbapi.Review) {
+	<a href={ t.SafeURL(fmt.Sprintf("/reviews/%v", r.ID)) }>
+		<li class="rounded-lg bg-white bg-opacity-10 hover:bg-opacity-15 transition p-5 flex gap-5 items-center h-48">
+			<div class="w-24">
+				<img class="rounded" src={ buildPosterURL(r.PosterPath) }/>
+			</div>
+			<div class="w-48 h-full">
+				<p class="text-2xl font-bold">{ r.Title }</p>
+				<p class="text-lg">
+					<span class="text-primary font-bold text-xl">{ fmt.Sprint(r.Rating) }</span><span>/10</span>
+				</p>
+				<i>"{ fmt.Sprint(r.Review) }"</i>
+			</div>
+		</li>
+	</a>
 }
 
 templ indexNowPlaying(movies []tmdbapi.NowPlayingMovie) {
