--- a/internal/auth/login.templ
+++ b/internal/auth/login.templ
@@ -1,16 +1,18 @@
-package templs
+package auth
 
-type LoginData struct {
+import "github.com/wipdev-tech/pmdb/internal/templs"
+
+type LoginPageData struct {
 	LoginError bool
 }
 
-templ Login(data LoginData) {
-	@Page("Login") {
-		<form hx-post="/login" hx-target="#response" hx-swap="innerHTML">
+templ LoginPage(data LoginPageData) {
+	@templs.Page("Login") {
+		<form hx-post="/users/login" hx-target="#response" hx-swap="innerHTML">
 			<h3 class="text-2xl font-semibold mb-1">Log In</h3>
 			<p>
 				Don't have an account?
-				<a href="/register" class="text-blue-500 hover:text-blue-400">Register</a>
+				<a href="/users/register" class="text-blue-500 hover:text-blue-400">Register</a>
 			</p>
 			<div class="grid md:grid-cols-[9rem_1fr] gap-2 max-w-xl my-5">
 				<label for="user-name">User Name</label>
@@ -18,8 +20,7 @@ templ Login(data LoginData) {
 					type="text"
 					id="user-name"
 					name="user-name"
-					value=""
-					class="border rounded px-2 py-1 text-gray-900"
+					value="" class="border rounded px-2 py-1 text-gray-900"
 					required
 				/>
 				<label for="password">Password</label>
@@ -49,7 +50,7 @@ templ Login(data LoginData) {
 	}
 }
 
-templ ErrorAlert(data LoginData) {
+templ ErrorAlert(data LoginPageData) {
 	<div id="response">
 		if data.LoginError {
 			<i class="text-red-400">Invalid credentials</i>
