--- a/internal/templs/movie.templ
+++ b/internal/templs/movie.templ
@@ -17,7 +17,7 @@ templ Movie(data MovieData) {
 			<section>
 				<img
 					class="w-full"
-					src={ buildPosterURL(data.Details.PosterPath) }
+					src={ BuildPosterURL(data.Details.PosterPath) }
 					alt={ data.Details.Title }
 				/>
 			</section>
