--- a/internal/templs/reviews.templ
+++ b/internal/templs/reviews.templ
@@ -16,7 +16,7 @@ templ NewReview(data NewReviewData) {
 		<div class="h-28 flex gap-5 items-center my-10">
 			<img
 				class="h-full rounded"
-				src={ buildPosterURL(data.Movie.PosterPath) }
+				src={ BuildPosterURL(data.Movie.PosterPath) }
 				alt={ data.Movie.Title }
 			/>
 			<div>
