--- a/internal/templs/index.templ
+++ b/internal/templs/index.templ
@@ -82,7 +82,7 @@ templ latestReviewCard(r tmdbapi.Review) {
 	<a href={ t.SafeURL(fmt.Sprintf("/reviews/%v", r.ID)) }>
 		<li class="rounded-lg bg-white bg-opacity-10 hover:bg-opacity-15 transition p-5 flex gap-5 items-center h-48">
 			<div class="w-24">
-				<img class="rounded" src={ buildPosterURL(r.PosterPath) }/>
+				<img class="rounded" src={ BuildPosterURL(r.PosterPath) }/>
 			</div>
 			<div class="w-48 h-full">
 				<p class="text-2xl font-bold">{ r.Title }</p>
@@ -118,7 +118,7 @@ templ indexNowPlaying(movies []tmdbapi.NowPlayingMovie) {
 						<img
 							class="rounded"
 							width="200"
-							src={ buildPosterURL(movie.PosterPath) }
+							src={ BuildPosterURL(movie.PosterPath) }
 							alt="poster_path"
 						/>
 					</li>
