--- a/internal/templs/utils.templ
+++ b/internal/templs/utils.templ
@@ -5,7 +5,7 @@ import (
 	"fmt"
 )
 
-func buildPosterURL(posterPath string) string {
+func BuildPosterURL(posterPath string) string {
 	url := t.URL(fmt.Sprintf("https://image.tmdb.org/t/p/w500%v", posterPath))
 	return string(url)
 }
