--- a/internal/auth/profile.templ
+++ b/internal/auth/profile.templ
@@ -1,13 +1,16 @@
-package templs
+package auth
 
-import "github.com/wipdev-tech/pmdb/internal/database"
+import (
+	"github.com/wipdev-tech/pmdb/internal/database"
+	"github.com/wipdev-tech/pmdb/internal/templs"
+)
 
 type ProfileData struct {
 	User database.GetUserRow
 }
 
 templ Profile(data ProfileData) {
-	@Page(data.User.DisplayName) {
+	@templs.Page(data.User.DisplayName) {
 		<div class="flex gap-4 items-end">
 			<h1 class="text-4xl font-title font-semibold mb-1">{ data.User.DisplayName }</h1>
 			<h2 class="text-2xl mb-1">{ data.User.UserName }</h2>
