Create home service

--- a/internal/templs/movie.templ
+++ b/internal/templs/movie.templ
@@ -42,7 +42,7 @@ templ Movie(data MovieData) {
 		</div>
 		<h3 class="border border-primary text-primary px-4 py-3 text-3xl rounded-xl font-semibold mb-5 flex gap-2 items-center justify-between">
 			<div class="flex gap-2 items-center">
-				@iconReview()
+				@IconReview()
 				PMDb Reviews
 			</div>
 		</h3>
