--- a/internal/templs/reviews.templ
+++ b/internal/templs/reviews.templ
@@ -58,7 +58,7 @@ templ NewReview(data NewReviewData) {
 				type="submit"
 				class="rounded px-3 py-2 bg-blue-600 hover:bg-blue-500 flex gap-2 items-center my-5 w-max"
 			>
-				@iconAddReview()
+				@IconAddReview()
 				Done
 			</button>
 		</form>
