--- a/internal/movies/movie.templ
+++ b/internal/movies/movie.templ
@@ -51,7 +51,7 @@ templ MoviePage(data MoviePageData) {
 			None (yet).
 		</p>
 		<a
-			href={ t.URL(fmt.Sprintf("/reviews/new?movieId=%v", data.Details.ID)) }
+			href={ t.URL(fmt.Sprintf("/movies/%v/reviews/new", data.Details.ID)) }
 			class="rounded px-3 py-2 bg-blue-600 hover:bg-blue-500 flex gap-2 items-center my-5 w-max"
 		>
 			<div class="flex gap-2 items-center">
