--- a/internal/home/index.templ
+++ b/internal/home/index.templ
@@ -41,7 +41,7 @@ templ indexWelcomeMessage(data IndexPageData) {
 			</p>
 			<div class="flex gap-3 items-center mt-5">
 				if data.LoggedIn {
-					<button hx-get="/logout" hx-confirm="Are you sure to log out?" class="text-blue-500 hover:text-blue-400">
+					<button hx-get="/users/logout" hx-confirm="Are you sure to log out?" class="text-blue-500 hover:text-blue-400">
 						Log
 						Out
 					</button>
@@ -81,16 +81,16 @@ templ indexLatestReviews(reviews []tmdbapi.Review) {
 
 templ latestReviewCard(r tmdbapi.Review) {
 	<a href={ t.SafeURL(fmt.Sprintf("/reviews/%v", r.ID)) }>
-		<li class="rounded-lg bg-white bg-opacity-10 hover:bg-opacity-15 transition p-5 flex gap-5 items-center h-48">
-			<div class="w-24">
+		<li class="rounded-lg bg-white bg-opacity-10 hover:bg-opacity-15 transition p-5 flex gap-5 items-center h-64">
+			<div class="w-36">
 				<img class="rounded" src={ templs.BuildPosterURL(r.PosterPath) }/>
 			</div>
-			<div class="w-48 h-full">
+			<div class="w-60 h-full flex flex-col">
 				<p class="text-2xl font-bold">{ r.Title }</p>
 				<p class="text-lg">
 					<span class="text-primary font-bold text-2xl">{ fmt.Sprint(r.Rating) }</span><span>/10</span>
 				</p>
-				<i class="line-clamp-2">{ fmt.Sprint(r.Review) }</i>
+				<i class="line-clamp-2 flex-grow">{ fmt.Sprint(r.Review) }</i>
 				<p class="text-gray-500 mt-5 text-right">~ { r.UserName }</p>
 				<p class="text-gray-500 text-right">{ r.CreatedAt }</p>
 			</div>
