--- a/internal/auth/register.templ
+++ b/internal/auth/register.templ
@@ -1,6 +1,7 @@
 package auth
 
 import "github.com/wipdev-tech/pmdb/internal/templs"
+import "github.com/wipdev-tech/pmdb/internal/database"
 
 type RegisterData struct {
 	ErrorMsgs []string
@@ -11,7 +12,7 @@ type RegisterSuccessData struct {
 }
 
 templ Register(data RegisterData) {
-	@templs.Page("Register") {
+	@templs.Page("Register", database.GetUserRow{}) {
 		<form
 			id="register"
 			hx-post="/users/register"
