--- a/internal/templs/utils.templ
+++ b/internal/templs/utils.templ
@@ -28,15 +28,32 @@ templ Page(title string, user database.GetUserRow) {
 			/>
 		</head>
 		<body class="bg-gray-950 text-gray-100 p-14 pb-2 max-w-7xl mx-auto font-body min-h-full flex flex-col">
-			<header class="flex items-center justify-center">
+			<header class="flex items-center justify-between">
 				<a href="/" class="flex flex-col md:flex-row md:items-end gap-3 text-primary mb-8">
 					@iconClapperboard()
 					<h1 class="font-title text-5xl">PMDb</h1>
 					<h2 class="font-title text-2xl">Your Personal Movie Database</h2>
 				</a>
-				<div>
-					if user.UserName != "" {
-						<p>{ user.UserName }</p>
+				<div class="flex items-center gap-5">
+					<p class="flex items-center gap-1">
+						@iconUser()
+						{ user.UserName }
+					</p>
+					if user.UserName != "guest" && user.UserName != "" {
+						<button hx-get="/users/logout" hx-confirm="Are you sure to log out?" class="text-blue-500 hover:text-blue-400">
+							Log Out
+						</button>
+					} else if user.UserName != "" {
+						<div class="space-x-2">
+							<a
+								href="/users/register"
+								class="rounded px-3 py-1 bg-blue-600 disabled:opacity-50 hover:bg-blue-500 text-white"
+							>
+								Join PMDb
+							</a>
+							or
+							<a href="/users/login" class="text-blue-500 hover:text-blue-400">Log In</a>
+						</div>
 					}
 				</div>
 			</header>
@@ -78,4 +95,8 @@ templ IconAddReview() {
 			d="M7 14h1.65q.2 0 .388-.075t.337-.225L14.05 9q.225-.225.338-.513t.112-.562q0-.275-.112-.537t-.313-.488l-.925-.95q-.225-.225-.5-.337t-.575-.113q-.275 0-.55.113t-.5.337L6.3 10.625q-.15.15-.225.338T6 11.35V13q0 .425.288.713T7 14m5.05-5.1l-.95-.925l.975-.975l.925.95zM11.2 14H17q.425 0 .713-.288T18 13q0-.425-.288-.712T17 12h-3.8zM6 18l-2.3 2.3q-.475.475-1.088.213T2 19.575V4q0-.825.588-1.412T4 2h16q.825 0 1.413.588T22 4v12q0 .825-.587 1.413T20 18z"
 		></path>
 	</svg>
+}
+
+templ iconUser() {
+	<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M9.775 12q-.9 0-1.5-.675T7.8 9.75l.325-2.45q.2-1.425 1.3-2.363T12 4q1.475 0 2.575.938t1.3 2.362l.325 2.45q.125.9-.475 1.575t-1.5.675zM4 20v-2.8q0-.85.438-1.562T5.6 14.55q1.55-.775 3.15-1.162T12 13q1.65 0 3.25.388t3.15 1.162q.725.375 1.163 1.088T20 17.2V20z"></path></svg>
 }
