--- a/internal/auth/login.templ
+++ b/internal/auth/login.templ
@@ -1,14 +1,13 @@
 package auth
 
 import "github.com/wipdev-tech/pmdb/internal/templs"
-import "github.com/wipdev-tech/pmdb/internal/database"
 
 type LoginPageData struct {
 	LoginError bool
 }
 
 templ LoginPage(data LoginPageData) {
-	@templs.Page("Login", database.GetUserRow{}) {
+	@templs.Page("Login") {
 		<form hx-post="/users/login" hx-target="#response" hx-swap="innerHTML">
 			<h3 class="text-2xl font-semibold mb-1">Log In</h3>
 			<p>
