--- a/internal/errors/error.templ
+++ b/internal/errors/error.templ
@@ -4,11 +4,10 @@ import (
 	"fmt"
 	"net/http"
 	"github.com/wipdev-tech/pmdb/internal/templs"
-	"github.com/wipdev-tech/pmdb/internal/database"
 )
 
 templ ErrorPage(statusCode int) {
-	@templs.Page("Error", database.GetUserRow{}) {
+	@templs.Page("Error") {
 		<h1 class="flex gap-2 items-center text-2xl font-semibold">
 			Error
 			@iconSad()
