--- a/internal/reviews/reviews.templ
+++ b/internal/reviews/reviews.templ
@@ -74,7 +74,7 @@ templ ReviewPage(data ReviewPageData) {
 				</span> / 10
 			</div>
 			<p
-				class="border border-primary rounded px-3 py-2 text-gray-50 min-h-48 bg-transparent"
+				class="border border-primary rounded px-3 py-2 text-gray-50 min-h-48 bg-transparent whitespace-pre-wrap"
 				id="review"
 				name="review"
 			>
