Adjust schema and server code for Posgres types

--- a/internal/home/index.templ
+++ b/internal/home/index.templ
@@ -75,7 +75,7 @@ templ latestReviewCard(r tmdbapi.Review) {
 				</p>
 				<div class="flex-grow"><i class="line-clamp-2 whitespace-pre-wrap">{ fmt.Sprint(r.Review) }</i></div>
 				<p class="text-gray-500 mt-5 text-right">~ { r.UserName }</p>
-				<p class="text-gray-500 text-right">{ r.CreatedAt }</p>
+				<p class="text-gray-500 text-right">{ fmt.Sprint(r.CreatedAt) }</p>
 			</div>
 		</li>
 	</a>
