--- a/internal/movies/movie.templ
+++ b/internal/movies/movie.templ
@@ -74,7 +74,7 @@ templ reviewsSection(reviews []database.GetReviewsForMovieRow) {
 			<blockquote class="border-l-4 border-primary p-3">
 				<div class="flex items-center gap-3">
 					<h4 class="text-lg">{ r.UserName }</h4>
-					<p class="text-gray-500">{ r.CreatedAt }</p>
+					<p class="text-gray-500">{ fmt.Sprint(r.CreatedAt) }</p>
 				</div>
 				<p>
 					<span class="text-primary font-bold text-2xl">{ fmt.Sprint(r.Rating) }</span><span>/10</span>
